Fix support for older JREs